--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pe.openlab.layni">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +21,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait" />
@@ -29,18 +30,22 @@
         <activity
             android:name=".ConfirmacionActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".PerfilActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ReservasActivity"
-            android:screenOrientation="portrait"/>
-
+            android:screenOrientation="portrait" />
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <activity android:name=".RegistroActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".ReservaActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
