--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pe.openlab.layni">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SplashActivity"
+            android:name=".splash.SplashActivity"
             android:screenOrientation="portrait"
             android:theme="@style/MyThemeNoBar">
             <intent-filter>
@@ -22,30 +22,31 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".ui.login.LoginActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ConfirmacionActivity"
+            android:name=".ui.confirmacion.ConfirmacionActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".PerfilActivity"
+            android:name=".ui.perfil.PerfilActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ReservasActivity"
+            android:name=".ui.reservas.ReservasActivity"
             android:screenOrientation="portrait" />
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".RegistroActivity"
-            android:screenOrientation="portrait"/>
-
-        <activity android:name=".ReservaActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.registro.RegistroActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.reserva.ReservaActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
